--- a/src/main/webapp/resources/css/userView.css
+++ b/src/main/webapp/resources/css/userView.css
@@ -7,18 +7,18 @@
 
 .leftcolumn{
     float: left;
-    background-color: grey;
+    background-color: blueviolet;
     margin-left: -100%;
     width: 250px;
     height: 600px;
-    padding-top: 200px;
+    margin-top: 200px
 }
 
 .content{
    float: left;
    background-color: greenyellow;
    margin-left: 250px;
-   padding-top: 200px;
+   //padding-top: 200px;
    height: 600px;
    width: 1000px;
 }
