--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,5 +1,3 @@
-@import url("reset.css");
-
 body {
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 13px;
@@ -10,16 +8,8 @@ p {
     padding: 10px;
 }
 
-#wrapper {
-    width: 100%;
-    min-width: 1000px;
-    max-width: 2000px;
-    margin: 0 auto;
-}
-
-#header {
-    float: left;
-    height: 200px;
+#head {
+    height: 60px;
     width: 100%;
     background: #FFFFAA;
     border:1px solid #000000;
@@ -54,7 +44,7 @@ p {
 }
 
 
-#newbook, #newuser, #popup, #action_popup {
+#newbook, #newuser {
 	z-index: 9999;
 	border: 1px solid #444;
 	width: 330px; 
@@ -65,17 +55,9 @@ p {
 	display:none;		
 }
 
-#background { 
-  left: 0; 
-  top: 0; 
-  position: absolute; 
-  background: #000; 
-  opacity: 0.7; 
-  z-index: 999; 
-  display: none; 
-  height: 100%; 
-  width: 100%; 
-} 
+.btn-my {
+	padding: 2px 12px;
+}
 
 .TableBooks a {
 	text-decoration: none;
@@ -141,7 +123,7 @@ p {
 	border:1px solid #000000;
 	border-width:0px 1px 1px 0px;
 	text-align:left;
-	padding:7px;
+	padding:3px;
 	font-size:10px;
 	font-family:Arial;
 	font-weight:normal;
