--- a/src/main/webapp/resources/css/userView.css
+++ b/src/main/webapp/resources/css/userView.css
@@ -7,7 +7,7 @@
 
 .leftcolumn{
     float: left;
-    background-color: blueviolet;
+    background-color: white;
     margin-left: -100%;
     width: 250px;
     height: 600px;
