--- a/src/main/webapp/resources/css/bootstrap_old.css
+++ b/src/main/webapp/resources/css/bootstrap_old.css
@@ -69,6 +69,7 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+  background-color: #475770;
 }
 
 a:focus {
@@ -4569,7 +4570,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  width: 940px;
+  width: 1024px;
 }
 
 .navbar-fixed-top {
@@ -4612,7 +4613,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a {
   float: none;
-  padding: 10px 15px 10px;
+  padding: 10px 10px 10px;
   color: #777777;
   text-decoration: none;
   text-shadow: 0 1px 0 #ffffff;
