Comment system added. Most rated books by genre

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -161,9 +161,9 @@ body > .navbar {
 	overflow: hidden;
 }
 
-.media-width {
+/* .media-width {
 	width: 600px;
-}
+} */
 
 .my-nav-header, .my-nav-header-top {
   display: block;
