--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -237,3 +237,13 @@ body.loading .modalloading {
 	padding: 10px;
 	background-color: #F0F0F0;
 }
+
+.reset_img {
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 20px;
+    opacity: 0.2;
+    text-shadow: 0 1px 0 #FFFFFF;
+    border: none;
+}
